zc.lockfile: Autospec creation for update from version 1.3.0 to version 1.4
1.4 (2018-11-12)
================

- Claim support for Python 3.6 and 3.7.

- Drop Python 2.6 and 3.3.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,14 @@
 Change History
 ***************
 
+1.4 (2018-11-12)
+================
+
+- Claim support for Python 3.6 and 3.7.
+
+- Drop Python 2.6 and 3.3.
+
+
 1.3.0 (2018-04-23)
 ==================
 
