--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,23 @@
 Change History
 ***************
 
+2.0 (2019-08-08)
+================
+
+- Extracted new ``SimpleLockFile`` that removes implicit behavior
+  writing to the lock file, and instead allows a subclass to define
+  that behavior.
+  (`#15 <https://github.com/zopefoundation/zc.lockfile/issues/15>`_)
+
+- ``SimpleLockFile`` and thus ``LockFile`` are now new-style classes.
+  Any clients relying on ``LockFile`` being an old-style class will
+  need to be adapted.
+
+- Drop support for Python 3.4.
+
+- Add support for Python 3.8b3.
+
+
 1.4 (2018-11-12)
 ================
 
